# specidentify

./: .travis.yml  LICENSE  README.md  setup.cfg  setup.py
docs/: conf.py
docs/notebook/: iraf_specreduce_tutorial.ipynb
specreduce/: WavelengthSolution.py  __init__.py  conftest.py  gingatools.py  guitools.py  interidentify.py  iterfit.py  spectools.py
specreduce/models/: IRCSmodel.py  ISISModel.py  hrsmodel.py
specreduce/tests/: test_spectools.py
